--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <header class="topbar">
 <div class="l"> <b>ToH · Encounter</b> <span id="worldChip" class="chip">세계관: -</span></div>
 <div class="r">
-<button id="btnLogin" class="btn pill pri">구글 로그인</button>
+<button id="btnAuth">구글 로그인</button>
 <button id="btnLogout" class="btn pill" style="display:none">로그아웃</button>
 </div>
 </header>
