--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,25 @@
 <!-- /public/index.html -->
 <!DOCTYPE html>
 <html lang="ko">
+
+
+  <head>
+  <script>
+    window.onerror = function(message, source, lineno, colno, error) {
+      alert(
+        '오류가 발생했습니다!\n\n' +
+        '메시지: ' + message + '\n' +
+        '파일: ' + source.split('/').pop() + '\n' +
+        '라인: ' + lineno
+      );
+      return true;
+    };
+  </script>
+
+  <meta charset="UTF-8">
+  <title>My App</title>
+  ...
+  </head>
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
