--- a/public/index.html
+++ b/public/index.html
@@ -4,24 +4,9 @@
 
 <script>self.FIREBASE_APPCHECK_DEBUG_TOKEN = true;</script>
 
-  <head>
-  <script>
-    window.onerror = function(message, source, lineno, colno, error) {
-      alert(
-        '오류가 발생했습니다!\n\n' +
-        '메시지: ' + message + '\n' +
-        '파일: ' + source.split('/').pop() + '\n' +
-        '라인: ' + lineno
-      );
-      return true;
-    };
-  </script>
 
-  <meta charset="UTF-8">
-  <title>My App</title>
-  ...
-  </head>
 <head>
+  <script>self.FIREBASE_APPCHECK_DEBUG_TOKEN = true;</script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
   <title>ToH · Encounter</title>
