Update index.html (#19)

--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,10 @@
         <span id="adminChip" class="chip" style="display:none;background:#222;color:#fff">관리자</span>
       </div>
       <div class="r" style="display:flex; align-items:center; gap:8px;">
-        <button id="btnMail" class="icon-btn" style="position:relative; display:none;">
+        <a href="#/mail" id="btnMail" class="icon-btn" style="position:relative; display:none; text-decoration: none;">
           📬
           <span id="mail-dot" style="position:absolute; top:-4px; right:-4px; width:10px; height:10px; border-radius:50%; background:red; display:none;"></span>
-        </button>
+        </a>
         <button id="btnAuth">구글 로그인</button>
       </div>
     </header>
