--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
       return true;
     };
   </script>
+  <link rel="stylesheet" href="/public/css/supporter_fx.css">
+
 </head>
 <body>
   <div id="app" class="wrap">
