--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/css/style.css" />
 
 
-  <link rel="stylesheet" href="/public/css/supporter_fx.css">
+  <link rel="stylesheet" href="/css/supporter_fx.css">
 
 </head>
 <body>
