--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+// (수정 후)
   <title>ToH · Encounter</title>
   <link rel="stylesheet" href="/css/style.css" />
 
 
-  <link rel="stylesheet" href="/css/supporter_fx.css">
+  <link rel="stylesheet" href="/css/supporter_fx.css" />
 
 </head>
 <body>
+// (이하 동일)
   <div id="app" class="wrap">
     <header class="topbar">
       <div class="l">
