--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,6 @@
 
   <div id="toast" class="toast" style="z-index:9999"></div>
 
-  <script type="module" src="/js/app.js?v="2025-09-23"></script>
+  <script type="module" src="/js/app.js?v="2025-09-23-a"></script>
 </body>
 </html>
