--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <a href="#/home" data-tab="home">🏠<span>홈</span></a>
     <a href="#/adventure" data-tab="adventure">🗺️<span>모험</span></a>
     <a href="#/rankings" data-tab="rankings">🏆<span>랭킹</span></a>
-    <a href="#/plaza" data-tab="plaza">🏛️<span>광장</span></a>
+    <a href="#/economy" data-tab="plaza">🏛️<span>광장</span></a>
     <a href="#/friends" data-tab="friends">👥<span>친구</span></a>
     <a href="#/me" data-tab="me">🙋‍♀️<span>내정보</span></a>
 
