--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
   <title>ToH · Encounter</title>
   <link rel="stylesheet" href="/css/style.css" />
-
-
   <link rel="stylesheet" href="/css/supporter_fx.css" />
-
+  
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.min.js"></script>
 </head>
 <body>
   <div id="app" class="wrap">
